Fixes #19 - uneven padding on code blocks

--- a/less/code_block.less
+++ b/less/code_block.less
@@ -1,3 +1,8 @@
+// fix uneven paddings
+.highlight pre {
+    margin-bottom: 8px;
+}
+
 .highlight {
     margin-bottom: 10px;
     padding: 15px;
