--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,5 +1,4 @@
-/* Generated 2020-07-13 20:45:35 */
-
+/* Generated 2021-01-04 20:08:14 */
 
 
 .container {
@@ -94,6 +93,9 @@ img.icon {
   margin-top: auto;
 }
 
+.highlight pre {
+  margin-bottom: 8px;
+}
 .highlight {
   margin-bottom: 10px;
   padding: 15px;
@@ -803,36 +805,6 @@ footer {
   min-height: 200px;
 }
 
-@media only screen and (max-width: 768px) {
-    div.dropdown-menu {
-        /* transition: opacity 6s, transform 6s; */
-        /* transform: scale(1, 0); */
-        /* /* transform: scaleX(.9); */
-        /* opacity: 0;  */
-        /* display: table-column; */
-    }
-
-    div.dropdown-menu.show {
-        /* height: auto; */
-        /* opacity: 1; */
-        /* transform: scale(1, 1) !important; */
-    }
-}
-
-/* @media only screen and (min-width: 768px) {
-    div.dropdown-menu {
-        transition: opacity .1s, transform .1s;
-        transform: scale(.7, .7);
-        opacity: 0;
-        display: table-column;
-    }
-
-    div.dropdown-menu.show {
-        height: auto;
-        opacity: 1;
-        transform: scale(1, 1) !important;
-    }
-} */
 .previous-next-wrapper h3,
 .previous-next-wrapper p {
   color: #212529;
@@ -918,256 +890,193 @@ footer {
 }
 
 button {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
-
 .post-search-dates {
-    list-style-type: none;
-    padding-left: 0;
+  list-style-type: none;
+  padding-left: 0;
 }
-
 .post-search-dates a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 .post-search-dates .months {
-    list-style-type: none;
+  list-style-type: none;
 }
-
 .months {
-    padding-left: 50px;
+  padding-left: 50px;
 }
-
 .plus-minus-wrapper {
-    background: none;
-    width: 30px;
-    height: 30px;
-    border: 0;
-    font-size: 1.5em;
-    position: relative;
-    vertical-align: middle;
+  background: none;
+  width: 30px;
+  height: 30px;
+  border: 0;
+  font-size: 1.5em;
+  position: relative;
+  vertical-align: middle;
 }
-
 .plus-minus-wrapper span {
-    position: absolute;
-    background: #222;
-    transition: .3s;
-    border-radius: 2px;
-    display: block;
+  position: absolute;
+  background: #222;
+  transition: 0.3s;
+  border-radius: 2px;
+  display: block;
 }
-
 /* hack for ios for some reason the width isn't respected
 so we start rotated */
 @supports (-webkit-touch-callout: none) {
-    .plus-minus-wrapper .vertical {
-        left: 30%;
-        right: 30%;
-        height: 20%;
-        top: 45%;
-
-        transform: rotate(90deg);
-    }
-
-    .plus-minus-wrapper .horizontal {
-        left: 30%;
-        right: 30%;
-        height: 20%;
-        top: 45%;
-    }
-
-    .rotate-vertical {
-        transform: rotate(180deg) !important;
-    }
+  .plus-minus-wrapper .vertical {
+    left: 30%;
+    right: 30%;
+    height: 20%;
+    top: 45%;
+    transform: rotate(90deg);
+  }
+  .plus-minus-wrapper .horizontal {
+    left: 30%;
+    right: 30%;
+    height: 20%;
+    top: 45%;
+  }
+  .rotate-vertical {
+    transform: rotate(180deg) !important;
+  }
 }
-
 /* for some reason the vertial and horizontal line aren't same size on ios */
 @supports not (-webkit-touch-callout: none) {
-    .plus-minus-wrapper .vertical {
-        top: 25%;
-        bottom: 25%;
-        width: 10%;
-        left: 45%;
-    }
-
-    .plus-minus-wrapper .horizontal {
-        left: 25%;
-        right: 25%;
-        height: 10%;
-        top: 45%;
-    }
-
-    .rotate-vertical {
-        transform: rotate(90deg);
-    }
+  .plus-minus-wrapper .vertical {
+    top: 25%;
+    bottom: 25%;
+    width: 10%;
+    left: 45%;
+  }
+  .plus-minus-wrapper .horizontal {
+    left: 25%;
+    right: 25%;
+    height: 10%;
+    top: 45%;
+  }
+  .rotate-vertical {
+    transform: rotate(90deg);
+  }
 }
-
-/* @supports (-webkit-touch-callout: none) {
-    .plus-minus-wrapper .vertical {
-        left: 30%;
-        right: 30%;
-        height: 20%;
-        top: 45%;
-    }
-
-    .plus-minus-wrapper .horizontal {
-        left: 30%;
-        right: 30%;
-        height: 20%;
-        top: 45%;
-    }
-} */
-
-
 .vertical-aligned-pills {
-    position: absolute;
-    /* arbitrary about the width of any given month plus a period with padding  */
-    left: 65px;
-    top: 4px;
+  position: absolute;
+  /* arbitrary about the width of any given month plus a period with padding  */
+  left: 65px;
+  top: 4px;
 }
-/* Essentially a recreation of the tailwindcss classes I use */
 
+/* Essentially a recreation of the tailwindcss classes I use */
 /* position */
 @media only screen and (min-width: 768px) {
-    .position-fixed-sm {
-        position: fixed;
-    }
+  .position-fixed-sm {
+    position: fixed;
+  }
 }
-
 /* width */
 @media only screen and (max-width: 768px) {
-    .w-sm-100 {
-        width: 100% !important;
-    }
+  .w-sm-100 {
+    width: 100% !important;
+  }
 }
-
 /* margin */
 .-ml-30 {
-    margin-left: -30px;
+  margin-left: -30px;
 }
-
 /* transition */
-
 .transition {
-    transition-property: all;
+  transition-property: all;
 }
-
 .transition-transform {
-    transition-property: transform;
+  transition-property: transform;
 }
-
 .transition-opacity {
-    transition-property: opacity;
+  transition-property: opacity;
 }
-
 .ease-out {
-    transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
-
 .ease-in {
-    transition-timing-function: ease-in;
+  transition-timing-function: ease-in;
 }
-
 .ease-in-out {
-    transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
 }
-
 /* opacity */
 .opacity-0 {
-    opacity: 0;
+  opacity: 0;
 }
-
 @media only screen and (max-width: 768px) {
-    .sm-opacity-0 {
-        opacity: 0;
-    }
+  .sm-opacity-0 {
+    opacity: 0;
+  }
 }
-
 .opacity-100 {
-    opacity: 1;
+  opacity: 1;
 }
-
 /* scale  */
 .scale-x-90 {
-    transform: scaleX(.9);
+  transform: scaleX(0.9);
 }
-
 .scale-y-90 {
-    transform: scaleY(.9);
+  transform: scaleY(0.9);
 }
-
 .scale-y-0 {
-    transform: scaleY(0);
+  transform: scaleY(0);
 }
-
 @media only screen and (max-width: 768px) {
-    .sm-scale-y-0 {
-        transform: scaleY(0) !important;
-    }
+  .sm-scale-y-0 {
+    transform: scaleY(0) !important;
+  }
 }
-
 .scale-70 {
-    transform: scale(.7, .7);
+  transform: scale(0.7, 0.7);
 }
-
 .scale-90 {
-    transform: scale(.9, .9);
+  transform: scale(0.9, 0.9);
 }
-
 /* duration */
 .duration-100 {
-    transition-duration: .1s;
+  transition-duration: 0.1s;
 }
-
 .duration-150 {
-    transition-duration: .15s;
+  transition-duration: 0.15s;
 }
-
 .duration-200 {
-    transition-duration: .2s;
+  transition-duration: 0.2s;
 }
-
 .duration-300 {
-    transition-duration: .3s;
+  transition-duration: 0.3s;
 }
-
 .duration-500 {
-    transition-duration: .5s;
+  transition-duration: 0.5s;
 }
-
 .duration-1000 {
-    transition-duration: 1s;
+  transition-duration: 1s;
 }
-
 .duration-1500 {
-    transition-duration: 1.5s;
+  transition-duration: 1.5s;
 }
-
 .duration-3000 {
-    transition-duration: 3s;
+  transition-duration: 3s;
 }
-
-
 .height-0 {
-    height: 0;
-    max-height: 0;
+  height: 0;
+  max-height: 0;
 }
-
 .overflow-y-hidden {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
-
 .height-auto {
-    height: auto;
+  height: auto;
 }
-
 .max-height-200 {
-    max-height: 200px;
+  max-height: 200px;
 }
-
 .height-test {
-    height: 58px;
+  height: 58px;
+}
+.raise-up-2-hover:hover {
+  transform: translateY(-2px);
 }
 
-.raise-up-2-hover:hover {
-    transform: translateY(-2px);
-}
