--- a/static/css/utility.css
+++ b/static/css/utility.css
@@ -1,147 +1,113 @@
 /* Essentially a recreation of the tailwindcss classes I use */
-
 /* position */
 @media only screen and (min-width: 768px) {
-    .position-fixed-sm {
-        position: fixed;
-    }
+  .position-fixed-sm {
+    position: fixed;
+  }
 }
-
 /* width */
 @media only screen and (max-width: 768px) {
-    .w-sm-100 {
-        width: 100% !important;
-    }
+  .w-sm-100 {
+    width: 100% !important;
+  }
 }
-
 /* margin */
 .-ml-30 {
-    margin-left: -30px;
+  margin-left: -30px;
 }
-
 /* transition */
-
 .transition {
-    transition-property: all;
+  transition-property: all;
 }
-
 .transition-transform {
-    transition-property: transform;
+  transition-property: transform;
 }
-
 .transition-opacity {
-    transition-property: opacity;
+  transition-property: opacity;
 }
-
 .ease-out {
-    transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
-
 .ease-in {
-    transition-timing-function: ease-in;
+  transition-timing-function: ease-in;
 }
-
 .ease-in-out {
-    transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
 }
-
 /* opacity */
 .opacity-0 {
-    opacity: 0;
+  opacity: 0;
 }
-
 @media only screen and (max-width: 768px) {
-    .sm-opacity-0 {
-        opacity: 0;
-    }
+  .sm-opacity-0 {
+    opacity: 0;
+  }
 }
-
 .opacity-100 {
-    opacity: 1;
+  opacity: 1;
 }
-
 /* scale  */
 .scale-x-90 {
-    transform: scaleX(.9);
+  transform: scaleX(0.9);
 }
-
 .scale-y-90 {
-    transform: scaleY(.9);
+  transform: scaleY(0.9);
 }
-
 .scale-y-0 {
-    transform: scaleY(0);
+  transform: scaleY(0);
 }
-
 @media only screen and (max-width: 768px) {
-    .sm-scale-y-0 {
-        transform: scaleY(0) !important;
-    }
+  .sm-scale-y-0 {
+    transform: scaleY(0) !important;
+  }
 }
-
 .scale-70 {
-    transform: scale(.7, .7);
+  transform: scale(0.7, 0.7);
 }
-
 .scale-90 {
-    transform: scale(.9, .9);
+  transform: scale(0.9, 0.9);
 }
-
 /* duration */
 .duration-100 {
-    transition-duration: .1s;
+  transition-duration: 0.1s;
 }
-
 .duration-150 {
-    transition-duration: .15s;
+  transition-duration: 0.15s;
 }
-
 .duration-200 {
-    transition-duration: .2s;
+  transition-duration: 0.2s;
 }
-
 .duration-300 {
-    transition-duration: .3s;
+  transition-duration: 0.3s;
 }
-
 .duration-500 {
-    transition-duration: .5s;
+  transition-duration: 0.5s;
 }
-
 .duration-1000 {
-    transition-duration: 1s;
+  transition-duration: 1s;
 }
-
 .duration-1500 {
-    transition-duration: 1.5s;
+  transition-duration: 1.5s;
 }
-
 .duration-3000 {
-    transition-duration: 3s;
+  transition-duration: 3s;
 }
-
-
 .height-0 {
-    height: 0;
-    max-height: 0;
+  height: 0;
+  max-height: 0;
 }
-
 .overflow-y-hidden {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
-
 .height-auto {
-    height: auto;
+  height: auto;
 }
-
 .max-height-200 {
-    max-height: 200px;
+  max-height: 200px;
 }
-
 .height-test {
-    height: 58px;
+  height: 58px;
 }
-
 .raise-up-2-hover:hover {
-    transform: translateY(-2px);
+  transform: translateY(-2px);
 }
